# ewasm-evm

./: .eslintrc.js  .gitignore  Cargo.toml  README.md  babel.config.js  build-rs.sh  mocha-require.js  package.json
.cargo/: config
js/: aux-api.js  boot-vm.js  eei-base.js  eei-intrinsic.js  eei.js  index.js  utils.js
src/: evm_word.rs  lib.rs  opcodes.rs  run_state.rs  signed_evm_word.rs  stack.rs  vm_error.rs
src/evm_word/: evm_word.rs  gen_macro.rs  mod.rs  signed_evm_word.rs
test/: smoke.js
test/helpers/: common.js  eei-mock.js  get-evm-tests.js
u256/: Cargo.toml
u256/src/: lib.rs  s256.rs  u256.rs
vm/src/: allocator.rs  eei.rs  eei_common.rs  interpreter.rs  lib.rs  memory.rs  mock_eei.rs  opcode.rs  opcodes.rs  parser.rs  run_state.rs  stack.rs  vm_error.rs
vm/src/boundary/: debug.rs  eei.rs  entrypoint.rs  mod.rs
