[package]
name = "ewasm-evm"
version = "0.1.0"
authors = ["Petr Kosikhin <mq3_storm@mail.ru>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]
path = "vm/src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = { version = "0.2.56" }
hex = "0.4.0"
u256 = { path = "u256" }
wee_alloc = "0.4.5"
serde_repr = "0.1.5"
js-sys = "0.3.35"
